[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["GTLugo <<>>"]
description = ""
name = "repl_python3_chikabot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.7.3"
python = "^3.8"
[tool.poetry.dependencies."discord.py"]
branch = "master"
git = "https://github.com/Rapptz/discord.py.git"
[tool.poetry.dev-dependencies]
